welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:14: error: reassignment to val
      compteur = compteur + 1
               ^